refactor: use strategy pattern for dashboard widgets